# moviebot-rs

./: .gitignore  Cargo.toml  shahidApiTesting.js
discord_movie_bot/: Cargo.toml
discord_movie_bot/src/: main.rs
src/: main.rs
src/client/: client.rs  commands.rs
src/server/: functions.rs
src/server/classes/: fasel.rs  mod.rs  netflix.rs  shahid.rs
